--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>info</title>
+    <style>
+        nav{
+            border: 1px solid rgb(197, 164, 164);
+            height: 200px;
+        }
+    </style>
 </head>
 <body>
-    
+    <nav>
+        <h1>navbar</h1>
+    </nav>
+    <div class="badan"><h1>badan</h1>
+    <img src="/PP(1)(1).png" alt="">
+    </div>
 </body>
-</html
+</html>
